# CS3241

./: README.md
lab 1/Lab1_todo_(mac-xcode)/: main_done
lab 1/Lab1_todo_(win-vs2017)/: main.cpp  main.sln  main.vcxproj
lab 1/e0550524_lab1/: CMakeLists.txt  main.cpp
lab 2/Lab2_todo_(mac-xcode)/: main.cpp  main_done
lab 2/Lab2_todo_(mac-xcode)/main.xcodeproj/: project.pbxproj
lab 2/e0550524_lab2/: CMakeLists.txt  main.cpp
lab 3/: model.blend
lab 3/Lab3_todo_(mac-xcode)/: image_io.cpp  main.cpp  main_done
lab 3/Lab3_todo_(mac-xcode)/main.xcodeproj/: project.pbxproj
lab 3/Lab3_todo_(mac-xcode)/main.xcodeproj/xcshareddata/xcschemes/: main.xcscheme
lab 3/e0550524_lab3/: CMakeLists.txt  Lab3  image_io.h  main.cpp
lab 4/: sword.blend
lab 4/Lab4_todo_(mac-xcode)/: Image.h  Main.cpp  Plane.h  Ray.h  Raytrace.cpp  Scene.h  Sphere.cpp  Triangle.cpp  Util.cpp  Util.h  Vector3d.h
lab 4/Lab4_todo_(mac-xcode)/Main.xcodeproj/: project.pbxproj
lab 4/Lab4_todo_(mac-xcode)/Main.xcodeproj/xcshareddata/xcschemes/: Main.xcscheme
lab 4/e0550524_lab4/: Camera.cpp  Camera.h  Color.h  Image.cpp  ImageIO.cpp  ImageIO.h  Lab4  Light.h  Main.cpp  Material.h  Plane.cpp  Raytrace.cpp  Raytrace.h  Sphere.cpp  Sphere.h  Surface.h  Triangle.h
